k8s/apps/base/qbittorrent/gateway.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      IPFamily: DualStack
    - name: bittorrent
      protocol: TCP
      port: 52525
      IPFamily: IPv6
    - name: bittorrent
      protocol: UDP
      port: 52525
      IPFamily: IPv6
